--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,17 +41,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha03'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 
     // Android Architecture Components
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'android.arch.lifecycle:common-java8:1.1.1'
-    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
 
     // Dependency injection
     implementation 'com.google.dagger:dagger:2.17'
@@ -60,24 +57,28 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.17'
 
     // Room persistence
-    implementation 'androidx.room:room-runtime:2.1.0-alpha06'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha06'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha06'
+    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
+    implementation 'androidx.room:room-rxjava2:2.2.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.2.0-alpha01'
+
+    // Navigation
+    implementation 'androidx.navigation:navigation-fragment:2.1.0-beta02'
+    implementation 'androidx.navigation:navigation-ui:2.1.0-beta02'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0-alpha'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
 
     // Reactive
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
 
-    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+    implementation("com.github.bumptech.glide:glide:4.9.0@aar") {
         transitive = true
     }
 
@@ -86,8 +87,8 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.17'
 }
